// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card/> renders the <Card/> on click with data 1`] = `
<div
  class="card__Group-s87lnr-2 ejogLi"
>
  <div
    class="card__Container-s87lnr-1 bGhkvJ"
  >
     
    <p
      class="card__Title-s87lnr-0 gMKuUI"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-5 bcGoX"
    >
      <div
        class="card__Item-s87lnr-8 huWLnU"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-s87lnr-7 ffNVYX"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 eBqRRD"
        >
          <p
            class="card__SubTitle-s87lnr-3 eMgeKg"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 gQaeVh"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 bGhkvJ"
  >
     
    <p
      class="card__Title-s87lnr-0 gMKuUI"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-5 bcGoX"
    >
      <div
        class="card__Item-s87lnr-8 huWLnU"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-s87lnr-7 ffNVYX"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 eBqRRD"
        >
          <p
            class="card__SubTitle-s87lnr-3 eMgeKg"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 gQaeVh"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card/> renders the <Card/> with data 1`] = `
<div
  class="card__Group-s87lnr-2 ejogLi"
>
  <div
    class="card__Container-s87lnr-1 bGhkvJ"
  >
     
    <p
      class="card__Title-s87lnr-0 gMKuUI"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-5 bcGoX"
    >
      <div
        class="card__Item-s87lnr-8 huWLnU"
      >
        <img
          class="card__Image-s87lnr-7 ffNVYX"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 eBqRRD"
        >
          <p
            class="card__SubTitle-s87lnr-3 eMgeKg"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 gQaeVh"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 bGhkvJ"
  >
     
    <p
      class="card__Title-s87lnr-0 gMKuUI"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-5 bcGoX"
    >
      <div
        class="card__Item-s87lnr-8 huWLnU"
      >
        <img
          class="card__Image-s87lnr-7 ffNVYX"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 eBqRRD"
        >
          <p
            class="card__SubTitle-s87lnr-3 eMgeKg"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 gQaeVh"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
